--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,19 @@ spring:
             scope:
               - email
               - profile
+          naver:
+            client-name: naver
+            client-id: ${NAVER_OAUTH_ID}
+            client-secret: ${NAVER_OAUTH_PW}
+            redirect-uri: ${NAVER_OAUTH_REDIRECT_URI}
+            authorization-grant-type: authorization_code
+            scope: email,nickname
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
   h2:
     console:
       enabled: true
