--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,12 +16,24 @@ spring:
             redirect-uri: ${NAVER_OAUTH_REDIRECT_URI}
             authorization-grant-type: authorization_code
             scope: email,nickname
+          kakao:
+            client-name: kakao
+            client-id: ${KAKAO_OAUTH_ID}
+            redirect-uri: ${KAKAO_OAUTH_REDIRECT_URI}
+            authorization-grant-type: authorization_code
+            scope: account_email,profile_nickname
         provider:
           naver:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
   h2:
     console:
       enabled: true
