--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,java,git,macos,gradle
+
+# local property
+application-*.yml
