feat (#28) : kafka 메세지 큐 구성

--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	implementation 'org.springframework.kafka:spring-kafka'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	implementation 'org.springframework.boot:spring-boot-testcontainers:3.1.2'
 	testRuntimeOnly 'com.h2database:h2'
 }
 
