--- a/src/main/resources/application-server.yml
+++ b/src/main/resources/application-server.yml
@@ -1,4 +1,6 @@
 spring:
+  mvc:
+    static-path-pattern: /view/**
   kafka:
     bootstrap-servers: 10.178.0.7:9092, 10.178.0.8:9092, 10.178.0.9:9092
     group-id: recipetory
