--- a/src/main/resources/application-server.yml
+++ b/src/main/resources/application-server.yml
@@ -18,7 +18,7 @@ spring:
       hibernate:
         default_batch_fetch_size: 1000
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
   security:
     oauth2:
       client:
