--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,6 +13,9 @@ spring:
     elasticsearch:
       hosts: localhost
       port: 9200
+  redis:
+    host: localhost
+    port: 6379
   jpa:
     properties:
       hibernate:
