--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -16,6 +16,8 @@ spring:
   redis:
     host: localhost
     port: 6379
+  session:
+    store-type: redis
   jpa:
     properties:
       hibernate:
