feat (#35) : Redis 캐싱, 로드밸런싱 적용

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,6 +13,11 @@ spring:
     elasticsearch:
       hosts: localhost
       port: 9200
+  redis:
+    host: localhost
+    port: 6379
+  session:
+    store-type: redis
   jpa:
     properties:
       hibernate:
